--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^0.16.2",
         "bootstrap": "^4.0.0",
         "bootstrap-vue": "^2.0.0-rc.2",
+        "font-awesome": "^4.7.0",
         "cross-env": "^5.0.1",
         "express": "^4.15.3",
         "nuxt": "^1.0.0-rc3",
